Fix spacing on MIP 2025 abstracts.

--- a/2025/css/skeleton.css
+++ b/2025/css/skeleton.css
@@ -479,3 +479,7 @@ h3 {
 td p {
   margin-bottom: 0;
 }
+
+.abstract p {
+  margin-top: 1rem;
+}
